--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 
 <body>
 		<h1 >
-			A “Mystery” series.
+			A “Mystery” series.<p class="ex6">
+				1973-1980
+			</p>
 		</h1>
+
 
 		<h2>This is the introduction of this artist:  <p class = "ex2">Mac Adam</p>
 		</h2>
@@ -23,7 +26,7 @@
 		</p>
 
 
-		<img src="Mac_Adams_Portrait.jpg" alt="Mac_Adams_Portrait" width="454" height="342">
+		<img src="Mac_Adams_Portrait.jpg" alt="Mac_Adams_Portrait" width="404" height="342">
 
 		<p class="ex5">Mac Adams (born in 1943 in Brynmawr, South Wales, UK) is a British artist. He graduated from Cardiff College of Art, N.D.D. 1961-66.A.T.D. 1966-67.
         Rutgers University, Master of Fine Arts. 1967-69. In 1969 while still a grad student he participated in the first ‘Soft Art’ Exhibitions at The New Jersey State Museum, along with Richard Serra. Richard Archwager, Keith Sonnier, and John Chamberlain among others.
