--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</h1>
 
 
-		<h2>This is the introduction of this artist:  <p class = "ex2">Mac Adam</p>
+		<h2>The extreme narrative compression, by  <p class = "ex2">Mac Adam</p>
 		</h2>
 
 		<p>
